--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -216,6 +216,10 @@ html,
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
+
+  img {
+    border-radius: 0.375rem;
+  }
 }
 body {
   position: relative;
